<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/rma1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.santos.sportquiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:src="@mipmap/rmalogo" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Real Madrid Quiz"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:hint="@string/hint_name"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/colorSecondaryText" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:background="@color/colorIcons"
                android:elevation="4dp"
                android:text="@string/btn_login"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:background="@color/colorIcons"
                android:elevation="4dp"
                android:text="@string/btn_register"
                android:textColor="@color/white" />



        </LinearLayout>

        <TextView
            android:id="@+id/link_to_registration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>
